--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
         "@headlessui/react": "^2.2.0",
         "@heroicons/react": "^2.1.5",
         "chart.js": "^4.4.5",
+        "framer-motion": "^11.11.10",
         "next": "^15.0.1",
         "react": "^19.0.0-rc-69d4b800-20241021",
         "react-chartjs-2": "^5.2.0",
-        "react-dom": "^19.0.0-rc-69d4b800-20241021"
+        "react-dom": "^19.0.0-rc-69d4b800-20241021",
+        "react-icons": "^5.3.0"
     },
     "devDependencies": {
         "@types/node": "^20",
