--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
         "react": "^19.0.0-rc-69d4b800-20241021",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^19.0.0-rc-69d4b800-20241021",
-        "react-icons": "^5.3.0"
+        "react-icons": "^5.3.0",
+        "simple-statistics": "^7.8.7"
     },
     "devDependencies": {
         "@types/node": "^20",
