--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@headlessui/react": "^2.2.0",
         "@heroicons/react": "^2.1.5",
+        "axios": "^1.7.7",
         "chart.js": "^4.4.5",
         "d3": "^7.9.0",
         "framer-motion": "^11.11.10",
