--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^19.0.0-rc-69d4b800-20241021",
         "react-icons": "^5.3.0",
+        "react-router-dom": "^6.27.0",
         "react-tooltip": "^5.28.0",
         "simple-statistics": "^7.8.7"
     },
