--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
         "react-icons": "^5.3.0",
         "react-router-dom": "^6.27.0",
         "react-tooltip": "^5.28.0",
-        "simple-statistics": "^7.8.7"
+        "simple-statistics": "^7.8.7",
+        "uuid": "^10.0.0"
     },
     "devDependencies": {
         "@types/d3": "^7.4.3",
